<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:icon="@drawable/send_icon"
        android:title="@string/share" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/dollar_icon"
        android:title="@string/salary_settings" />

    <group android:id="@+id/settings_group">
        <item
            android:id="@+id/notifications_settings"
            android:icon="@drawable/notifications"
            android:title="@string/notifications_settings" />

        <item
            android:id="@+id/feedback"
            android:icon="@drawable/feedback"
            android:title="@string/send_us_feedback" />
    </group>
</menu>