<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:paddingLeft="30dp"
    android:paddingTop="30dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_to_auto_work_log"
        android:id="@+id/textView"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <TextView
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/welcome_description"
        android:id="@+id/textView2"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/button"
        android:layout_marginTop="50dp"
        android:onClick="saveUserSalaryData"
        android:textSize="25sp"
        android:textAllCaps="false"
        android:textColor="#000000"

        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>

</LinearLayout>